<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <GVL Name="Temperatures" Id="{6b3c64a4-035e-4f63-8518-47a4501db4a9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	T_Ref	:REAL := 40;
	T_Act	:REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>